--- a/html/homeAdmin.html
+++ b/html/homeAdmin.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primera Maqueta Bootstrap 5</title>
+    <title>JS - LocalStorage</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/index.css">
     <script src="https://kit.fontawesome.com/f40d0764a0.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/admin.css">
 </head>
 
 <body>
@@ -26,11 +27,56 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="./homeAdmin.html">Inicio</a>
+                        <a class="nav-link active text-white ms-3" aria-current="page"
+                            href="./homeAdmin.html">Inicio</a>
                     </li>
                     <li class="nav-item">
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-success" data-bs-toggle="modal"
+                            data-bs-target="#exampleModal">
+                            Crear Nuevo Producto
+                        </button>
 
-                        <button type="button" class="btn btn-success"> Cerrar Sesion</button>
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                            aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Alta de Productos</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form>
+                                            <div class="mb-3">
+                                                <label for="exampleInputEmail1" class="form-label">Imagen</label>
+                                                <input type="email" class="form-control" id="imagen"
+                                                    aria-describedby="emailHelp" >
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="exampleInputPassword1" class="form-label">Marca</label>
+                                                <input type="text" class="form-control" id="marca">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="exampleInputPassword1" class="form-label">Precio</label>
+                                                <input type="text" class="form-control" id="precio">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="exampleInputPassword1" class="form-label">Descripcion</label>
+                                                <input type="text" class="form-control" id="descripcion">
+                                            </div>
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-primary" onclick="crearProducto()">Crear Producto</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <button type="button" class="btn btn-success" onclick="logout()"> Cerrar Sesion</button>
                     </li>
                 </ul>
             </div>
@@ -52,105 +98,8 @@
                             <th scope="col">Cambiar Role</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <!--                 <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                    </tr> -->
-
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>Andres</td>
-                            <td>
-                                <!-- Button trigger modal -->
-                                <button type="button" class="btn btn-success" data-bs-toggle="modal"
-                                    data-bs-target="#exampleModal">
-                                    Modificar
-                                </button>
-
-                                <!-- Modal -->
-                                <div class="modal fade" id="exampleModal" tabindex="-1"
-                                    aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                    <div class="modal-dialog">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title" id="exampleModalLabel">Modificar usuario</h5>
-                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                    aria-label="Close"></button>
-                                            </div>
-                                            <div class="modal-body">
-                                                <form action="" class="form">
-                                                    <label for="">usuario</label>
-                                                    <input type="text" value="'Andres">
-                                                    <label for="">contraseña</label>
-                                                    <input type="password" value="asd">
-                                                </form>
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-primary">Guardar Cambios</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!-- boton eliminar -->
-
-                                <!-- Button trigger modal -->
-                                <button type="button" class="btn btn-danger" data-bs-toggle="modal"
-                                    data-bs-target="#exampleModal2">
-                                    Eliminar
-                                </button>
-
-                                <!-- Modal -->
-                                <div class="modal fade" id="exampleModal2" tabindex="-1"
-                                    aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                    <div class="modal-dialog modal-dialog-centered">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title" id="exampleModalLabel">Estas Seguro de que
-                                                    quieres eliminar este Usuario</h5>
-                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                    aria-label="Close"></button>
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary"
-                                                    data-bs-dismiss="modal">NO</button>
-                                                <button type="button" class="btn btn-primary">SI</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </td>
-                            <td>
-                                <!-- Button trigger modal -->
-                                <button type="button" class="btn btn-warning" data-bs-toggle="modal"
-                                    data-bs-target="#exampleModal3">
-                                    Cambiar Role
-                                </button>
-
-                                <!-- Modal -->
-                                <div class="modal fade" id="exampleModal3" tabindex="-1"
-                                    aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                    <div class="modal-dialog modal-dialog-centered">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title" id="exampleModalLabel">Estas Seguro de Cambiar
-                                                    de Role (ADMIN) a este usuario?</h5>
-                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                    aria-label="Close"></button>
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary"
-                                                    data-bs-dismiss="modal">NO</button>
-                                                <button type="button" class="btn btn-primary">SI</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
+                    <tbody id="tBody">
+                        <!-- aqui se injecta el html -->
                     </tbody>
                 </table>
             </div>
@@ -160,6 +109,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
+    <script src="../js/validarAdmin.js"></script>
+    <script src="../js/admin.js"></script>
+    <script src="../js/crud.productos.js"></script>
 </body>
 
 </html>
