--- a/html/homeUser.html
+++ b/html/homeUser.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primera Maqueta Bootstrap 5</title>
+    <title>JS - LocalStorage</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -32,7 +32,7 @@
                         <a class="nav-link active text-white" aria-current="page" href="./CartHome.html">Carrito</a>
                     </li>
                     <li class="nav-item">
-                        <button type="button" class="btn btn-success"> Cerrar Sesion</button>
+                        <button type="button" class="btn btn-success" onclick="logout()"> Cerrar Sesion</button>
                     </li>
 
                 </ul>
@@ -43,17 +43,8 @@
     <main>
         <h2 class="text-center my-3">Bienvenido (Usuario)</h2>
         <div class="container">
-            <div class="row">
-                <div class="card" style="width: 18rem;">
-                    <img src="../img/coca.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Coca Cola </h5>
-                        <p class="card-text">$300</p>
-                        <button type="button" class="btn btn-success my-3">Ver Mas...</button>
-                        <button type="button" class='btn btn-dark'>Añadir al Carrito</button>
-
-                    </div>
-                </div>
+            <div class="row" id="rowCard">
+         
             </div>
         </div>
     </main>
@@ -61,6 +52,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
+        <script src="../js/validarUser.js"></script>
+        <script src="../js/user.js"></script>
 </body>
 
 </html>
